resources/styles/_antd-tweaks.less
@import '_antd-theme';

.ant-btn {
  border: 2px solid @cta-blue;
  border-radius: 8px;
  color: @cta-blue;
  font-size: 16px;
  font-weight: bold;
  line-height: 24px;
  min-width: 120px;

  &:hover {
    border-color: @mid-blue;
    color: @mid-blue;
  }

  &:disabled {
    color: @shade-3;
  }

  &:focus {
    border-color: @cta-blue;
    box-shadow: 0 0 4px 1px @cta-blue;
    color: @cta-blue;
  }

  &:active {
    border-color: @dark-blue;
    color: @dark-blue;
  }

  &-primary {
    border: none;
    color: #ffffff;
  }

  &.ant-btn-primary {
    &:hover {
      background-color: @mid-blue;
      color: #ffffff;
    }

    &:disabled {
      background-color: @shade-2;
    }

    &:focus {
      background-color: @cta-blue;
      box-shadow: 0 0 4px 1px @cta-blue;
      color: #ffffff;
    }

    &:active {
      background-color: @dark-blue;
      color: #ffffff;
    }
  }
}

.ant-input {
  border: 2px solid @shade-2;
  border-radius: 8px;
  font-size: 14px;
  line-height: 24px;

  &:disabled {
    border-color: @shade-2;
  }

  &:focus {
    border-color: @shade-2;
    box-shadow: 0 0 4px 1px @cta-blue;
    color: @shade-6;
  }

  &.ant-input-lg {
    font-weight: bold;
    font-size: 16px;
  }
}
.ant-input-affix-wrapper .ant-input-lg:not(:first-child) {
  padding-left: 34px;
}

.ant-input-prefix {
  .anticon {
    color: @shade-5;
    font-size: 16px;
  }
}

input[type='checkbox'].ant-checkbox-input {
  height: 24px;
  width: 24px;
}

.ant-checkbox label {
  margin-left: 11px;
}

.ant-checkbox-inner {
  border-color: @shade-5;

  &::after {
    top: -1px;
    left: 3px;
    height: 12px;
    width: 6px;
  }
}

.ant-input-search.ant-input-search-enter-button > .ant-input {
  padding-left: 38px;
}

@media (max-width: @screen-xs) {
  .ant-input-search.ant-input-search-enter-button > .ant-input {
    padding-left: 30px;
    padding-right: 8px;
  }
}
.ant-notification {
  .ant-notification-notice-description {
    font-size: 14px;
    color: #ffffff;
    line-height: 20px;
  }

  .ant-notification-notice-with-icon .ant-notification-notice-description {
    margin-left: 30px;
    margin-right: 30px;
  }

  .ant-notification-notice-with-icon .ant-notification-notice-message {
    font-size: 14px;
    font-weight: bold;
    color: #ffffff;
    line-height: 20px;
    margin-left: 30px;
  }

  .ant-notification-notice-message {
    max-width: 300px;
    word-wrap: break-word;
  }

  .ant-notification-notice-closable .ant-notification-notice-message {
    padding-right: 16px;
  }

  .ant-notification-notice {
    padding: 18px;
    border-radius: 8px;
  }

  .ant-notification-notice-icon {
    margin: 0px;
  }

  .ant-notification-close-icon {
    color: #ffffff;
    font-weight: 800;
  }
}

.ant-modal {
  @media (max-width: @screen-md) {
    margin: 0 auto;
  }
  .ant-modal-confirm-body {
    .anticon {
      color: @primary-color;
    }
  }
}

.ant-layout-header {
  height: auto;
}

.ant-form-explain,
.ant-form-extra {
  padding-left: 12px;
}

.create-account .ant-form-item-control {
  line-height: normal;
}

.ant-layout-header,
.ant-layout-footer,
.ant-layout-content {
  padding-left: 16px;
  padding-right: 16px;

  @media (min-width: 768px) {
    padding-left: 50px;
    padding-right: 50px;
  }
}

.ant-skeleton-paragraph {
  padding: 0px;
}

.ant-pagination {
  .ant-pagination-item,
  .ant-pagination-next .ant-pagination-item-link,
  .ant-pagination-prev .ant-pagination-item-link {
    border: 2px solid @shade-5;
    border-radius: 8px;
    a {
      color: @shade-5;
      font-size: 16px;
      font-weight: bold;
    }

    &:hover {
      border-color: @mid-blue;
      color: @mid-blue;
      a {
        color: @mid-blue;
      }
    }
  }

  .anticon {
    vertical-align: 0px;
    &:hover {
      color: @mid-blue;
    }
  }

  .ant-pagination-item-active,
  .ant-pagination-item-active:hover {
    border-color: @cta-blue;
    a {
      color: @cta-blue;
    }
  }

  .ant-pagination-disabled .ant-pagination-item-link,
  .ant-pagination-disabled:hover .ant-pagination-item-link {
    border-color: @shade-4;
    color: @shade-4;
    a,
    i:hover {
      color: @shade-4;
    }
  }
}

.ant-form-explain {
  font-size: 14px;
  line-height: 16px;
  margin-top: 4px;
  margin-bottom: 8px;
}

